crates/air_r_parser/tests/snapshots/ok/semicolons/semicolon-end-of-file-03.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
1

;

```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RDoubleValue {
            value_token: R_DOUBLE_LITERAL@0..1 "1" [] [],
        },
    ],
    eof_token: EOF@1..5 "" [Newline("\n"), Newline("\n"), Whitespace(";"), Newline("\n")] [],
}
```

## CST

```
0: R_ROOT@0..5
  0: (empty)
  1: R_EXPRESSION_LIST@0..1
    0: R_DOUBLE_VALUE@0..1
      0: R_DOUBLE_LITERAL@0..1 "1" [] []
  2: EOF@1..5 "" [Newline("\n"), Newline("\n"), Whitespace(";"), Newline("\n")] []

```
