crates/air_r_parser/tests/snapshots/ok/semicolons/semicolon-start-of-file-01.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
;
1

```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RDoubleValue {
            value_token: R_DOUBLE_LITERAL@0..3 "1" [Whitespace(";"), Newline("\n")] [],
        },
    ],
    eof_token: EOF@3..4 "" [Newline("\n")] [],
}
```

## CST

```
0: R_ROOT@0..4
  0: (empty)
  1: R_EXPRESSION_LIST@0..3
    0: R_DOUBLE_VALUE@0..3
      0: R_DOUBLE_LITERAL@0..3 "1" [Whitespace(";"), Newline("\n")] []
  2: EOF@3..4 "" [Newline("\n")] []

```
