crates/air_r_parser/tests/snapshots/ok/semicolons/semicolon-start-of-file-02.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
;1

```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RDoubleValue {
            value_token: R_DOUBLE_LITERAL@0..2 "1" [Whitespace(";")] [],
        },
    ],
    eof_token: EOF@2..3 "" [Newline("\n")] [],
}
```

## CST

```
0: R_ROOT@0..3
  0: (empty)
  1: R_EXPRESSION_LIST@0..2
    0: R_DOUBLE_VALUE@0..2
      0: R_DOUBLE_LITERAL@0..2 "1" [Whitespace(";")] []
  2: EOF@2..3 "" [Newline("\n")] []

```
